--- a/set.env
+++ b/set.env
@@ -6,8 +6,8 @@ BOT_NAME=Zokou-MD
 BOT_MENU_LINKS=LUFFY
 PUBLIC_MODE=yes
 HEROKU=no
-OWNER_NAME=Djalega++
-NUMERO_OWNER=22891733300
+OWNER_NAME=Djouri 
+NUMERO_OWNER=50936170311
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=yes
 PRESENCE=1
